# qtCpp_learning

./: .gitignore  .gitmodules  README.md
OpenGLDemo/: CMakeLists.txt  (+9 more)
OpenGLTutorials/OpenGLBegin/: CMakeLists.txt  assets.qrc  avframeopenglwidget.cpp  avframeopenglwidget.h  concurrentqueue.cpp  concurrentqueue.h  data_type.h  ffmpegplayer.cpp  ffmpegplayer.h  framequeue.cpp  framequeue.h  glvideowidget.cpp  glvideowidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  qglbegin.cpp  qglbegin.h  qopenglskyboxwidget.cpp  qopenglskyboxwidget.h  texturewidget.cpp  texturewidget.h  videotexturewidget.cpp  videotexturewidget.h
OpenGLTutorials/OpenGLBegin/images/: 1280x720_2.yuv  file_0.txt  file_1.txt  file_2.txt  file_3.txt  file_4.txt
OpenGLTutorials/OpenGLBegin/shaders/: begin.frag  begin.vert  texture_mapping.frag  texture_mapping.vert
OpenGLTutorials/openGL_learning/: CMakeLists.txt  main.cpp
OpenGLTutorials/openGL_learning/my_library/: CMakeLists.txt
QMLMapDemo/: CMakeLists.txt  main.cpp  mainwindow.cpp  osm_map.qml  qml.qrc
QMLMapDemo/widgets/: mymap.cpp  mymap.h
QmlInQGraphicsSence/: CMakeLists.txt  customgraphicsview.cpp  customgraphicsview.h  graphitem.cpp  graphitem.h  graphitemimpl.cpp  graphitemimpl.h  griditem.cpp  griditem.h  mainwindow.cpp  mainwindow.h  menuwidget.cpp  menuwidget.h  myrectangle.cpp  myrectangle.h  previewgraphicsvideoitem.cpp  previewgraphicsvideoitem.h  previewwidget.cpp  previewwidget.h  qml.qrc  qmlwidget.cpp  qmlwidget.h
QmlInQGraphicsSence/qml/: menu.qml
QtAVPlayerCMakeDemo/: CMakeLists.txt  avplayermanager.cpp  avplayermanager.h  customwidget.cpp  customwidget.h  mainwindow.cpp
cmake_struct_project/: CMakeLists.txt  main.cpp
cmake_struct_project/cmake/: functions.cmake
cmake_struct_project/my_library/: CMakeLists.txt
cmake_struct_project/my_library/src/: my_library.cpp
cmake_struct_project/normal_library/: CMakeLists.txt
cmake_struct_project/normal_library/src/: my_library.cpp  my_library.h
cmake_struct_project/shared_library/: CMakeLists.txt
cmake_struct_project/static_library/: CMakeLists.txt
drag_drop_test/: .gitignore  CMakeLists.txt  main.cpp
drag_drop_test/qml/: ComponentItem.qml  DragDropDemonstrator.qml  GraphCanvas.qml  Main.qml  MathHelper.js  MovablePoint.qml  MovablePointC.qml
ffmpeg_rtsp_client/: CMakeLists.txt  log.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  player.cpp  player.h
ffmpeg_rtsp_client/models/: asyncqueue.h  frameconsumer.cpp  frameconsumer.h  frameproducer.cpp  frameproducer.h  framequeue.cpp  framequeue.h  qavhwdevice_d3d11.cpp  qavhwdevice_d3d11_p.h  qavhwdevice_p.h
ffmpeg_rtsp_client/samples/: CMakeLists.txt
ffmpeg_rtsp_client/ui/: glwidget.cpp  glwidget.h
grpc_demo/: CMakeLists.txt  main.cpp
grpc_demo/client/: echo_client.cpp  echo_client.h  main.cpp
grpc_demo/proto/: echo.proto
grpc_demo/server/: echo_server.cpp  echo_server.h  main.cpp
hkv_reuse_streaming/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
libvlc_usage/: CMakeLists.txt
libvlc_usage/src/: main.cpp
media_player_ffmpeg/: CMakeLists.txt  README.md
media_player_ffmpeg/src/: main.cpp
nxopen_env/hkv_reuse_streaming/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  resourcecontainer.h
opencv_import/: CMakeLists.txt  README.md  main.cpp
position_extractor_tool/: CMakeLists.txt  Main.qml  appmodel.cpp  appmodel.h  main.cpp
qt_translation/: CMakeLists.txt
qt_translation/app/: CMakeLists.txt  main.cpp
qt_translation/lib/: CMakeLists.txt  backend.cpp  backend.h  languagemanager.cpp  languagemanager.h
qt_translation/translations/: app_en.ts  app_vi.ts
rtsp-client-ffmpeg-opencv/: .gitignore  CMakeLists.txt  defer.h  logger.h  main.cpp  mediadecoder.cpp  mediadecoder.h  videoplayer.cpp  videoplayer.h
rtsp_checker/: CMakeLists.txt  main.cpp
rtsp_client_demo/: .gitignore  CMakeLists.txt  FrameListener.h  README.md  common.h  dummysink.cpp  dummysink.h  framedecoder.cpp  framedecoder.h  framequeue.cpp  framequeue.h  main.cpp  mainwindow.cpp  mainwindow.h  ourrtspclient.cpp  ourrtspclient.h  rtspclient.cpp  rtspclient.h  rtspclientimpl.cpp  rtspclientimpl.h  rtspclientmanager.cpp  rtspclientmanager.h  rtspconsumefunction.cpp  rtspconsumefunction.h  streamclientstate.cpp  streamclientstate.h  videodecoder.cpp  videodecoder.h  videoplayer.cpp  videoplayer.h  videowidget.cpp  videowidget.h  videowidgetgenerator.cpp  videowidgetgenerator.h
rtsp_client_demo/customModule/: CMakeLists.txt  rtspclient.h
rtsp_client_demo/rtsp_module/: CMakeLists.txt  h264_video_streamer.cpp  h264_video_streamer.h  live555_client.cpp  live555_client.h  module_function.h  playcommand.cpp  playcommand.h  result.cpp  result.h  rtspclient.cpp  rtspclient.h  rtspcommand.cpp  rtspcommand.h  sdpparser.cpp  sdpparser.h  setupcommand.cpp  setupcommand.h  startupcommand.cpp  startupcommand.h
rtsp_server_demo/: CMakeLists.txt  main.cc
rtsp_server_ffmpeg/: CMakeLists.txt  main.cpp  rtspserver.cpp  rtspserver.h
rtsp_server_qt_demo/: CMakeLists.txt  README.md  announceURL.cpp  main.cpp
serial_port/: CMakeLists.txt  main.cpp  serialport.cpp  serialport.h
watermonitor2/: CMakeLists.txt  chartholderbasewidget.cpp  chartholderbasewidget.h  common.cpp  common.h  dashboard.cpp  dashboard.h  expendablewidget.cpp  expendablewidget.h  filtercombobox.cpp  filtercombobox.h  generaldashboard.cpp  generaldashboard.h  images.qrc  main.cpp  overviewchartwidget.cpp  overviewchartwidget.h  settingpanel.cpp  settingpanel.h  statusbar.cpp  statusbar.h
watermonitor2/charts/: chartholderbasewidget.cpp  chartholderbasewidget.h  compliancechart.cpp  compliancechart.h  environmentallitterindicatorschart.cpp  environmentallitterindicatorschart.h  flourinatedcompoundschart.cpp  flourinatedcompoundschart.h  pollutantoverviewchart.cpp  pollutantoverviewchart.h  popschart.cpp  popschart.h  rawdatapage.cpp  rawdatapage.h
watermonitor2/handlers/: dataHandler.cpp  dataHandler.hpp  filter.cpp  filter.hpp  model.cpp  model.hpp  water.cpp  water.hpp
watermonitor2/translations/: water_de.qm  water_en.qm  water_es.qm  water_fr.qm
(+265 files in other folders)
